add Slf4j config