@@ -13,7 +13,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -24,46 +23,57 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public ProductResponse getProductById(Long productId) {
+        log.debug("[getProductById] productId: {}", productId);
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ProductNotFoundException("Ürün bulunamadı: " + productId));
-
-        log.info("Ürün bulundu: {}", product.getProductName());
-        return mapper.toDto(product);
+        ProductResponse response = mapper.toDto(product);
+        log.debug("[getProductById] response: {}", response);
+        return response;
     }
 
     @Override
     public List<ProductResponse> getAllProducts() {
-       List<Product> listOfProducts = productRepository.findAll();
-        return listOfProducts.stream().map(mapper::toDto).collect(Collectors.toList());
+        log.debug("[getAllProducts]");
+       List<Product> products = productRepository.findAll();
+       List<ProductResponse> response = products.stream()
+                       .map(mapper::toDto)
+                               .toList();
+        log.debug("[getAllProducts] product count: {}", response.size());
+        return response;
     }
 
     @Override
     public ProductResponse updateProduct(Long id, ProductRequest productRequest) {
+        log.debug("[updateProduct] productId: {} request: {}", id, productRequest);
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ProductNotFoundException("Ürün bulunamadı: " + id));
         mapper.updateEntity(product, productRequest);
-        return mapper.toDto(productRepository.save(product));
+        Product updatedProduct = productRepository.save(product);
+        ProductResponse response = mapper.toDto(updatedProduct);
+        log.debug("[updateProduct] response: {}", response);
+        return response;
     }
 
     @Override
     public ProductResponse createProduct(ProductRequest productRequest) {
+        log.debug("[createProduct] request: {}", productRequest);
         boolean isExists = productRepository.existsByOwnerIdAndProductName(productRequest.getOwnerId(), productRequest.getProductName());
         if (isExists) {
             throw new ProductAlreadyExistsException("Bu ürün zaten mevcut.");
         }
-
         Product product = mapper.toEntity(productRequest);
-        productRepository.save(product);
-
-        return getProductById(product.getId());
+        Product savedProduct = productRepository.save(product);
+        ProductResponse response = mapper.toDto(savedProduct);
+        log.debug("[createProduct] response: {}", response);
+        return response;
     }
 
     @Override
     public void deleteProduct(Long productId) {
+        log.debug("[deleteProduct] productId: {}", productId);
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ProductNotFoundException("Ürün bulunamadı: " + productId));
-
         productRepository.delete(product);
-        log.info("Ürün başarılı bir şekilde silindi: {}",  productId);
+        log.info("[deleteProduct] deleted productId: {}", productId);
     }
 }
